version/0.12/_sources/api/solver/_autosummary/settings/injections.rst.txt
:orphan:

.. _injections:

injections
==========

.. currentmodule:: ansys.fluent.core.solver.settings_231.injections

.. autoclass:: injections
    :show-inheritance:
    :undoc-members:
.. rubric:: Named object type

:ref:`injections_child <injections_child>`


.. rubric:: Included in:

======================================   ==============================================================================================================================================================================================================

Parent                                                                                                                                                                                                                                          Summary

======================================   ==============================================================================================================================================================================================================
:ref:`discrete_phase <discrete_phase>`       Toplevel menu of the Discrete Phase multiphase model. A discrete phase model (DPM) is used when the aim is to investigate the behavior of the particles from a Lagrangian view and a discrete perspective.

======================================   ==============================================================================================================================================================================================================

