version/0.17/_sources/api/solver/_autosummary/settings/injections.rst.txt
:orphan:

.. _injections:

injections
==========

.. autoclass:: ansys.fluent.core.solver.settings_232.injections.injections
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`injections_child <injections_child>`


.. rubric:: Included in:

======================================   ==============================================================================================================================================================================================================

Parent                                                                                                                                                                                                                                          Summary

======================================   ==============================================================================================================================================================================================================
:ref:`discrete_phase <discrete_phase>`       Toplevel menu of the Discrete Phase multiphase model. A discrete phase model (DPM) is used when the aim is to investigate the behavior of the particles from a Lagrangian view and a discrete perspective.

======================================   ==============================================================================================================================================================================================================

